# InstaNER

./: .gitignore  Article.md  README.md  pyproject.toml
src/: main.py
src/datasets/: __init__.py  dataset_handler.py  ner_dataset.py
src/evaluation/: eval_metrics.py  evaluate.py
src/generation/: exceptions.py  generate_dataset.py  prompts.py
src/inference/: inference.py
src/llm/: agent.py  api.py  exceptions.py
src/training/: __init__.py  train_transformer.py
tests/: generation_test.py  integration_test.py  loading_dataset_test.py  training_test.py
